--- a/pratica/news-homepage/index.html
+++ b/pratica/news-homepage/index.html
@@ -6,17 +6,31 @@
   <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
   <title>News homepage</title>
   <link rel="stylesheet" href="style/style.css">
+  <style>
+    
+  </style>
 </head>
 <body>
   <main>
-    <img src="assets/images/logo.svg" alt="">
-    <nav>
-      Home
-      New
-      Popular
-      Trending
-      Categories
-    </nav>
+    <img src="assets/images/logo.svg">
+
+    <input type="checkbox" name="menu" id="ico-menu">
+      <label for="ico-menu">
+        <img src="assets/images/icon-menu.svg" onclick="clickMenu()">
+      </label>
+
+    <div class="menu" id="menu">
+      <div class="back"></div>
+      <img src="assets/images/icon-menu-close.svg" onclick="clickMenu()">
+      <nav>
+        <p>Home</p>
+        <p>New</p>
+        <p>Popular</p>
+        <p>Trending</p>
+        <p>Categories</p>
+      </nav>
+    
+    </div>    
     <picture>
       <source media="(min-width: 1000px)" srcset="assets/images/image-web-3-desktop.jpg">
       <img src="assets/images/image-web-3-mobile.jpg" alt="">
@@ -72,5 +86,14 @@
       </div>
     </section>
   </main>
+  <script>
+    function clickMenu(){
+      if (menu.style.display == 'block'){
+        menu.style.display = 'none'
+      }else {
+        menu.style.display = 'block'
+      }
+    }
+  </script>
 </body>
 </html>
