--- a/pratica/news-homepage/index.html
+++ b/pratica/news-homepage/index.html
@@ -6,19 +6,12 @@
   <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
   <title>News homepage</title>
   <link rel="stylesheet" href="style/style.css">
-  <style>
-    
-  </style>
+  <link rel="stylesheet" href="style/media-query.css">
 </head>
 <body>
   <main>
     <img src="assets/images/logo.svg">
-
-    <input type="checkbox" name="menu" id="ico-menu">
-      <label for="ico-menu">
-        <img src="assets/images/icon-menu.svg" onclick="clickMenu()">
-      </label>
-
+      <img src="assets/images/icon-menu.svg" onclick="clickMenu()" class="menu-icone">
     <div class="menu" id="menu">
       <div class="back"></div>
       <img src="assets/images/icon-menu-close.svg" onclick="clickMenu()">
@@ -29,10 +22,9 @@
         <p>Trending</p>
         <p>Categories</p>
       </nav>
-    
     </div>    
     <picture>
-      <source media="(min-width: 1000px)" srcset="assets/images/image-web-3-desktop.jpg">
+      <source media="(min-width: 1440px)" srcset="assets/images/image-web-3-desktop.jpg">
       <img src="assets/images/image-web-3-mobile.jpg" alt="">
     </picture>
 
