corrigindo menu do News Homepage

--- a/pratica/news-homepage/index.html
+++ b/pratica/news-homepage/index.html
@@ -16,11 +16,13 @@
       <div class="back"></div>
       <img src="assets/images/icon-menu-close.svg" onclick="clickMenu()">
       <nav>
-        <p>Home</p>
-        <p>New</p>
-        <p>Popular</p>
-        <p>Trending</p>
-        <p>Categories</p>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/">New</a></p>
+          <li><a href="/">Popular</a></p>
+          <li><a href="/">Trending</a></p>
+          <li><a href="/">Categories</a></p>
+        </ul>
       </nav>
     </div>    
     <picture>
