--- a/pratica/clipboard-landing-page/index.html
+++ b/pratica/clipboard-landing-page/index.html
@@ -7,6 +7,7 @@
     <title>Clipboard Landing Page</title>
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media-query.css">
 </head>
 <body>
     <main>
