Huddle Curved Sections finalizado

--- a/pratica/huddle-curved-sections/index.html
+++ b/pratica/huddle-curved-sections/index.html
@@ -7,6 +7,7 @@
     <title>Huddle Curved Section</title>
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media-query.css">
 </head>
 <body>
     <header>
