--- a/pratica/chat-app/index.html
+++ b/pratica/chat-app/index.html
@@ -8,8 +8,11 @@
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <title>Chat App</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media-query.css">
 </head>
 <body>
+    <div class="fundo1"></div>
+    <div class="fundo2"></div>
     <main>
         <div class="topo">
             <div class="notch">
