--- a/projeto-cordel/index.html
+++ b/projeto-cordel/index.html
@@ -9,81 +9,58 @@
 </head>
 <body>
     <header>
-    <h1>Cordel Moderno</h1>
-    <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></p>
+    <h1>As Coisas que Florescem Depois</h1>
+    <p>Por <a href="https://www.instagram.com/ingrid__thaais/" target="_blank" rel="external">Ingrid Thais</a></p>
     </header>
 
     <section class="normal">
         <p>
-            Estou ficando cansado <br>
-            Da tal tecnologia <br>
-            Só se fala por e-mail <br>
-            Mensagem curta e fria <br>
-            Twitter e Facebook <br>
-            Antes que eu caduque <br>
-            Vou dizer tudo em poesia.
+           Há coisas que só florescem<br>
+            Depois da tempestade<br>
+            E eu fui uma delas.
         </p>
     </section>
     <section class="imagem" id="img01">
         <p>
-            Não é mais como era antes <br>
-            É tudo abreviado <br>
-            "Você" só tem duas letras <br>
-            O "O" e o "E" foi riscado <br>
-            Para declarar o amor <br>
-            Basta botar uma flor <br>
-            E um coração desenhado.
+            Demorei para entender<br>
+            Que o amor que a gente dá<br>
+            Não garante o amor que recebe<br>
+            E tudo bem<br>
+            O coração aprende devagar mesmo.
         </p>
     </section>
     <section class="normal">
         <p>
-            Arroba agora não pesa <br>
-            É parte de um endereço <br>
-            Ponto final nem se usa <br>
-            Ou vai até no começo <br>
-            Agora é .com <br>
-            Se o saite é muito bom <br>
-            Ele vale um alto preço.
+            Eu me cobrei,<br>
+            Me culpei,<br>
+            Me quebrei…<br>
+            Mas cada pedaço meu<br>
+            Foi voltando para o lugar<br>
+            Com mais força do que antes.
         </p>
         <p>
-            Pra piorar a liguagem <br>
-            O emoticom é um risco <br>
-            Tem símbolo para tudo <br>
-            Ponto e vírgula e um asterisco <br>
-            Um beijo significa <br>
-            Pra entender como fica <br>
-            Decifre esse rabisco.
+            Hoje, quando penso em nós,<br>
+            Não penso com mágoa<br>
+            Penso com gratidão<br>
+            Você me ensinou que o amor machuca,<br>
+            Mas a falta dele machuca mais<br>
+            Quando é a gente mesma<br>
+            Que deixa de se amar.
         </p>
     </section>
     <section class="imagem" id="img02">
         <p>
-            Tenho saudade das cartas <br>
-            Escritas com a própria mão <br>
-            Mandava no mês de Junho <br>
-            Só chegava no Verão <br>
-            Mas matava a saudade <br>
-            Era texto de verdade <br>
-            Nas linhas do coração.
+            E agora eu sigo leve,<br>
+            Seguindo os caminhos<br>
+            Que antes eu não via<br>
+            Porque te esperava.
         </p>
     </section>
     <section class="normal">
         <p>
-            Agora, escrevo e envio <br>
-            Chegando na mesma hora <br>
-            Mas quando vou prosear <br>
-            A pessoa foi embora <br>
-            Abriu outro aplicativo <br>
-            O mundo ficou cativo <br>
-            Da tecnologia do agora.
-        </p>
-        <p>
-            Felizmente, pra orar <br>
-            Não precisa de internet <br>
-            Deus escuta todo mundo <br>
-            Se quiser, faça esse teste <br>
-            Dois pontos são dois joelhos <br>
-            Seus lábios são aparelhos <br>
-            Deixe que Deus interprete.
+            Floresci tarde?<br>
+            Talvez.<br>
+            Mas floresci inteira.
         </p>
     </section>
     <footer>
